更新RBAC模型