@@ -89,6 +89,16 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.17.1</version>
+        </dependency>
 
         <!-- gson-fire 如果沒有特殊需求（如處理多態、循環引用）可以移除 -->
         <dependency>
@@ -202,6 +212,10 @@
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
                     <mainClass>com.example.Launcher</mainClass>
+                    <options>
+                        <option>--add-reads</option>
+                        <option>com.example.javafxdemo=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
                 <executions>
                     <execution>
